Updated btn-3 animation
I updated btn-3 to have an animation that has the button pumping like a heartbeat.

--- a/style.css
+++ b/style.css
@@ -86,26 +86,25 @@ p {
     }
 
 .btn-3 {
-    background-color: #008CBA;
-    color: #ffffff;
-    font-size: 16px;
-    padding: 10px 20px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: transparent;
+    border: 3px solid #8d02ff;
+    font-family: fantasy;
+    color: #2802ff;
     font-weight: bold;
-    border: none;
-    border-radius: 75%;
-    box-shadow: 0 4px 15px 0 #006699;
-    width: 350px;
-    animation: gradient 3s infinite;
+    transition: .3s;
+  }
+  .btn-3:hover {
+    animation: heartbeat 1s infinite;
+    transition: 3s;
+  }
+  @keyframes heartbeat {
+    0% {
+      transform: scale(1);
     }
-      
-    @keyframes gradient {
-        0% {background-color: #6b115c;}
-        50% {background-color: #531c69b0;}
-        100% {background-color: #370f49;}
-      }
-
-
+    70% {
+      transform: scale(.9);
+    }
+      100% {
+      transform: scale(1);
+    }
+  }
